# Propulse

./: .cursorrules  .gitignore  .gitmessage  AGENTS.md  CMakeLists.txt  CMakePresets.json  COMMIT_CONVENTIONS.md  Makefile  README.md  bootstrap-mac.sh  build-all-releases.sh  generate-changelog.sh  install-fpc-mac.sh  release.sh  upload-releases.sh
.cursor/: mcp.json
.cursor/commands/: commit.md
.cursor/rules/: config-and-build.mdc  docs-and-help.mdc  freepascal-avoid-variant-inline.mdc  pascal-core.mdc  tools.mdc
cmake/: fpc.cmake
cmake/toolchains/: linux-arm64.cmake  linux-x64.cmake  macos-arm64.cmake  macos-x86.cmake  windows-x64.cmake
data/: help.txt
docs/: building.txt
lib/macos-arm64/: libSDL2.dylib  libsoxr.dylib
misc/soxr/: Toolchain-x86_64-w64-mingw32.cmake
src/: automation.pas  commandline.pas  helpers.pas  mainwindow.pas  propulse.pas  sampleeditor.pas
src/cwe/: cwe.core.pas  cwe.dialogs.pas
src/cwe/widgets/: cwe.widgets.text.pas  sampleview.pas
src/dialog/: dialog.generatewaveform.pas  dialog.notes.pas  dialog.renderaudio.pas
src/include/: buildinfo.pas  fileutils.pas  graphics32.pas  graphics32_lowlevel.pas  soxr.pas
src/include/sdl2/: sdl2.pas  sdlsyswm.inc
src/protracker/: protracker.editor.pas  protracker.format.it.pas  protracker.format.s3m.pas  protracker.metadata.pas  protracker.player.pas  protracker.util.pas
src/screen/: fx.vectorlogo.pas  screen.config.pas  screen.editor.pas  screen.filereq.pas  screen.filereqsample.pas  screen.help.pas  screen.log.pas  screen.notes.pas  screen.samples.pas  screen.splash.pas
tools/check-for-updates/: check-for-updates-0.1.0-1.rockspec  check-for-updates-0.1.0.rockspec  check-for-updates-dev-1.rockspec  check-for-updates.lua
tools/mcp/: propulse_ui_mcp.py
tools/scripts/: check-for-updates.lua  check-for-updates.sh  telegram_sendmsg.sh  validate_help.py
